fix: update styles in category-dropdown and header-title components for better visibility; refactor final price calculation in new-product component

--- a/src/app/components/category-dropdown/category-dropdown.component.scss
+++ b/src/app/components/category-dropdown/category-dropdown.component.scss
@@ -12,10 +12,12 @@
     border-radius: 6px;
     appearance: none;
     cursor: pointer;
+    color: var(--gray-2);
 
     &:focus {
       outline: none;
       border-color: var(--green-mid);
+      color: var(--gray-2);
     }
   }
 
@@ -27,5 +29,6 @@
     right: 10px;
     transform: translateY(-50%);
     pointer-events: none;
+    color: var(--gray-2);
   }
 }
