--- a/src/app/components/header-title/header-title.component.scss
+++ b/src/app/components/header-title/header-title.component.scss
@@ -10,6 +10,7 @@
   position: absolute;
   background-color: transparent !important;
   border: 0;
+  color: var(--gray-2);
 }
 
 .header-title {
